--- a/_posts/2012-12-29-sorry.md
+++ b/_posts/2012-12-29-sorry.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 助手正在升级中
+title: 助手正在升级中(已升级)
 ---
 
 {% include JB/setup %}
@@ -9,4 +9,4 @@ title: 助手正在升级中
 
 预计新的版本将在今晚发布，对您造成的不便深表歉意。
 
-
+##已升级
